--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -1038,6 +1038,14 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \end{figure}
 
 \newpage
+\subsubsection{Interazione con una compilation}
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/design/dettaglio_itinerario.svg}
+	\caption{Dettaglio compilation e rimozione itinerario da compilation}
+\end{figure}
+
+\newpage
 \subsection{Diagrammi di sequenza di design}
 Sono di seguito presentati i diagrammi di sequenza di design per due casi d'uso significativi.
 
