Inseriti sequence nella documentazione

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -832,6 +832,24 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 
 \newpage
 \subsection{Diagrammi di sequenza di analisi}
+Sono presentati nella seguente sezione i Sequence Diagram relativi a due funzionalità offerte dall'applicazione:
+la segnalazione di un itinerario e la ricerca di un itinerario.
+\\subsubsection{Segnalazione itinerario}
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=1]{./diagrams/sequenceDomain-segnalazioneItinerario.pdf}
+	\caption{Sequence Diagram 1 - Segnalazione di un itinerario}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\subsubsection{Ricerca itinerario}
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/sequenceDomain-ricercaItinerario.svg}
+	\caption{Sequence Diagram 2 - Ricerca di un itinerario}
+\end{figure}
+\FloatBarrier
 
 \newpage
 \subsection{Diagrammi di attività}
