Dettagliata analisi architettura

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -1040,80 +1040,86 @@ la segnalazione di un itinerario e la ricerca di un itinerario.
 \section{Documento di Design del sistema}
 \subsection{Analisi dell'architettura e criteri di design}
 \subsubsection{Software deployment}
-L'architettura del software pone le sue fondamenta nel concetto di \textbf{cloud computing}.\\
+L'architettura del software realizzato pone le sue fondamenta nel concetto di \textbf{cloud computing}.\\
 Il cloud computing, o computazione cloud, consiste nella distribuzione on-demand di risorse IT, con 
 una tariffazione basata sul consumo.\\\\
-In particolare, si è usufruito dei servizi offerti dalla piattaforma proprietaria del gruppo 
+Tra i diversi provider, è stato scelto di usufruire dei servizi offerti dalla piattaforma proprietaria del gruppo 
 Amazon \textbf{AWS}, \textbf{Amazon Web Services}.
-AWS, che offre cloud services ideali per creare applicazioni in modo scalabile, flessibile e affidabile, 
-presenta infatti notevoli vantaggi, che sono stati ritenuti adatti al software implementato.\\
+AWS offre infatti cloud services ideali per creare applicazioni in modo scalabile, flessibile e affidabile; esso 
+presenta inoltre notevoli vantaggi, ritenuti come caratteristiche desiderabili per la progettazione di qualunque software.\\
 
-La piattaforma AWS è stata scelta, inoltre, per le seguenti caratteristiche:
+La scelta della piattaforma AWS è stata compiuta, inoltre, per le seguenti qualità:
 \begin{itemize}
-	\item Agilità - la possibilità di aumentare a seconda delle necessià risorse quali servizi infrastrutturali, 
+	\item \textbf{Agilità} - la possibilità di aumentare a seconda delle necessità risorse quali servizi infrastrutturali, 
 		  calcolo, storage e database;
-	\item Elasticità - evita l'allocazione anticipata di una quantità maggiore di risorse di quante siano necessarie, 
-		  così da gestire i picchi nei livelli di attività future;
-	\item Distribuzione globale di contenuti - l'infrastruttura AWS offre una copertura globale: fare in modo che le 
+	\item \textbf{Elasticità} - la possibilità di evitare l'allocazione anticipata di una quantità maggiore di risorse di 
+			quante siano necessarie, così da gestire i picchi nei livelli di attività future;
+	\item \textbf{Distribuzione globale di contenuti} - l'infrastruttura AWS offre una copertura globale: fare in modo che le 
 		  applicazioni siano vicino agli utenti finali riduce la latenza e migliora la loro esperienza.\\
 \end{itemize}
 
 
-In particolare, i servizi utilizzati sono stati:
+AWS offre una grande varietà di servizi; ciascuno di essi va incontro a una specifica necessità dello sviluppatore. \\
+Nello sviluppo del software, per implementare determinate funzionalità si è scelto di ricorrere all'utilizzo dei seguenti servizi:
 \begin{itemize}
 	\item \textbf{Cognito} - Amazon Cognito permette di aggiungere strumenti di registrazione degli utenti, accesso 
 		  e controllo degli accessi alle app Web e per dispositivi mobili. Esso supporta l'accesso degli utenti 
-		  tramite l'uso di provider di identità social quali Facebook, Google; tale risorsa è 
-		  stata ritenuta fondamentale anche in termini di sicurezza degli utenti.
+		  tramite l'uso di provider di identità social quali Facebook, Google. 
+		  Tale risorsa è stata sfruttata realtivamente all'autenticazione utente, tenendo particolarmente in considerazione 
+		  l'alto fattore di sicurezza che essa conferisce;
 	\item \textbf{EC2} - l'\textbf{Elastic Compute Cloud} (Amazon EC2) fornisce capacità di calcolo scalabile in AWS Cloud. 
 		  Esso offre ambienti di elaborazione virtuale, noti come \textit{istanze}, varie configurazioni di CPU, memoria, 
-		  archiviazione e capacità di rete per le istanza note come \textit{tipi di istanza}. In particolare, la scelta di EC2 
-		  è finalizzata al deploy dell'applicativo Spring, utilizzato per realizzare il Rest Service.
+		  archiviazione e capacità di rete per le istanza note come \textit{tipi di istanza}. 
+		  La scelta di tale servizio è stata finalizzata al deploy dell'applicativo Spring, nella realizzazione del Rest Service.
 	\item \textbf{RDS} - Amazon RDS ha permesso la configurazione e l'utilizzo del database relazionale alla base del software prodotto;
-	\item \textbf{S3} - il \textbf{Simple Storage Service} (Amazon S3) permette l'archiviazione di oggetti in modo scalabile; è stato utilizzato 
-		  per conservare in modo permanente file immagine caricati dagli utenti;
-	\item \textbf{Lambda} - AWS Lambda è un servizio di calcolo basato su eventi serverless. È stato utilizzato, all'interno del software, per l'inserimento di un nuovo 
-		  utente nel database in seguito alla registrazione, nella sua integrazione con il servizio \textbf{Cognito}. Tale scelta ha evitato la possibile presenza di inconsistenze tra database e registrazioni effettivamente realizzate: 
-		  Lambda permette infatti di creare dei trigger (in quest caso di \textit{post conferma}) utili a questo scopo.
+	\item \textbf{S3} - il \textbf{Simple Storage Service} (Amazon S3) permette l'archiviazione di oggetti in modo scalabile. 
+		  Esso è stato adoperato in merito alla preservazione permanente dei file immagine caricati dagli utenti;
+	\item \textbf{Lambda} - AWS Lambda è un servizio di calcolo basato su eventi serverless. 
+		  La scelta del servizio Lambda è stata incentivata dalla sua possibilità di integrazione con il servizio \textbf{Cognito}, e dettata 
+		  dalla volontà di conferire \textit{consistenza} al pool utenti del sistema.
+		  Nello specifico, si è sfruttata la possibilità offerta dal servizio di creare dei \textit{trigger} (in particolare trigger di \textit{post conferma}), al fine di 
+		  evitare - in seguito al processo di registrazione - la possibile presenza di inconsistenze tra database e registrazioni effettivamente portate a termine.
 \end{itemize}
-Attraverso il framework \textbf{Amplify} è stato possibile realizzare un servizio di autenticazione sicuro (tramite il servizio \textit{Cognito}) e 
-l'archiviazione di file (tramite il servizio \textit{S3}).
-Amplify consente anche di creare back-end o applicativi serverless; nel caso del software realizzato, è stata fatta la scelta di utilizzarlo solo 
-in funzione di alcuni servizi da esso offerti. Questa scelta è stata influenzata anche in seguito alla deprecazione dell'SDK standard AWS per Android.
+
+Si è ritenuto inoltre fondamentale l'utilizzo del framework \textbf{Amplify}.\\
+In particolare, Amplify è stato impiegato per realizzare:
+\begin{itemize} 
+	\item Un servizio di autenticazione particolarmente sicuro tramite, come citato, il servizio \textit{Cognito};
+	\item L'archiviazione di file (nella prima versione del software solo di file immagine) tramite il servizio \textit{S3}.
+\end{itemize}
+
+È importante specificare che il framework Amplify consente anche di creare back-end o applicativi serverless. Ciononostante, si sottolinea che 
+nella realizzazione del software è stata fatta la scelta di utilizzarlo \textit{solo} in funzione dei servizi da essi offerti, soprattutto in relazione alla deprecazione 
+dell'SDK standard AWS per Android.
 
 \subsubsection{Google Maps Platform}
-L'applicazione NaTour si basa fortemente sulla componente geolocalizzata degli itinerari.\\
-Per garantire un'esperienza ottimale da questo punto di vista sono stati utilizzati i servizi 
-della piattaforma Google Maps. \\\\
-La \textbf{Google Maps Platform} è un insieme di API e SDK che permette di integrare Google Maps in applicazioni 
-mobile e di recuperare dati da Google Maps stesso. In particolare, si è usufruito delle seguenti API:
+Una delle caratteristiche principali del software risulta essere la forte componente geolocalizzata degli itinerari presenti in piattaforma. \\
+Gli utenti, infatti, nell'inserimento e nella visualizzazione dei sentieri si trovano ad interfacciarsi direttamente con mappe interattive.
+Per garantire un'esperienza ottimale da questo punto di vista sono stati utilizzati i servizi della piattaforma Google Maps. \\\\
+La \textbf{Google Maps Platform} è un insieme di API e SDK che permette di integrare in applicazioni mobile Google Maps, e di recuperare dati da esso stesso.
+L'esperienza utente con le funzionalità sopracitate è stata supportata dall'utilizzo delle seguenti API:
 \begin{itemize}
-	\item MapsAPI - per la visualizzazione interattiva di mappe statiche e dinamiche
+	\item MapsAPI - per la visualizzazione interattiva di mappe statiche e dinamiche;
 	\item PlacesAPI - per il recupero di informazioni sui posti tramite richieste HTTP;
-	\item DirectionsAPI - per il calcolo del percorso tra diverse tappe; esse utilizzano una richiesta HTTP 
-		  per ritornare le direzioni tra località in formato JSON o XML. 
-		  Le DirectionsAPI, in quanto web service, sono state integrate nel 
-		  Rest Service proprio del software.
-
+	\item DirectionsAPI - per il calcolo del percorso tra diverse tappe; utilizzano una richiesta HTTP per ritornare le direzioni tra località in formato JSON o XML. 
+		  Le DirectionsAPI, in quanto web service, sono state integrate nel Rest Service proprio del software.
 \end{itemize}
 
 \subsubsection{Architettura del Rest Service}
-Per la realizzazione del Rest Service è stato utilizzato il framework \textbf{Spring}.\\
-Spring fornisce un'infrastruttura di supporto per lo sviluppo di applicazioni. \\
-L'applicativo è organizzato secondo un'architettura a strati:
+Nella realizzazione del Rest Service è stato scelto di utilizzare il framework \textbf{Spring}. \\
+Spring fornisce un'\textit{infrastruttura di supporto} per lo sviluppo di applicazioni: esso prevede una \textit{modularizzazione} dell'architettura come segue:
 \begin {itemize}
-	\item Presentation layer - strato più esterno, che gestisce la presentazione del contenuto e 
-		  l'interazione con l'utente;
+	\item Presentation layer - strato più esterno, che gestisce la presentazione del contenuto e l'interazione con l'utente;
 	\item Business logic layer - strato centrale, che gestisce la logica;
 	\item Data access layer - strato più interno, che gestisce il recupero di dati dalle diverse sorgenti.
 \end{itemize}
 
 Ciascuno di questi strati dipende da quello sottostante per far sì che l'applicazione funzioni. In altre parole,
 lo strato di presentazione comunica con quello della business logic, che a sua volta comunica con lo strato di data 
-access. Ogni strato ha quindi bisogno di questa \textit{dipendenza} per eseguire il proprio compito. \\\\
+access. Ogni strato ha quindi bisogno di questa \textit{dipendenza} per eseguire il proprio compito correttamente \\\\
 
-La scelta è ricaduta sul framework Spring per ottenere un \textit{loose coupling}, ossia un accoppiamento largo. 
-Senza l'utilizzo di Spring, il codice avrebbe potuto causare \textit{tight coupling}, che non è 
+La scelta di utilizzare il framework Spring è stata fatta in relazione alla volontà di ottenere un \textit{loose coupling}, ossia un accoppiamento largo. 
+Senza l'utilizzo di Spring, ci sarebbe stata la possibilità che il codice avesse potuto causare \textit{tight coupling}, che non è 
 considerato essere una buona pratica di programmazione. Il loose coupling è ideale, in quanto le componenti largamente 
 accoppiate sono indipendenti: ciò implica che, a seguito di possibili cambiamenti futuri, questi non influenzeranno 
 le altre componenti.\\
@@ -1134,6 +1140,80 @@ Tra alcune dei vantaggi di scegliere Spring Boot, si ricordano:
 	\item Nessuna generazione di codice e nessun requisito per la configurazione XML;
 	\item Inclusione di un web server embedded (nello specifico \textit{Apache Tomcat}) senza la necessità di ulteriori configurazioni.
 \end{itemize}
+
+\newpage
+\subsection{Architettura dell’applicativo}
+L’applicativo è stato progettato basandosi sul concetto di \textbf{Clean architecture}. \\
+Tale “clean architecture” è stata realizzata basandosi  sui principi enunciati, nell’omonimo libro,  
+da Robert C. Martin, in seguito alla lettura dello stesso. \\
+L’idea chiave è quella di usare il principio di inversione di dipendenza per porre dei boundaries tra componenti di alto livello e componenti di basso livello. 
+Ciò crea un’architettura \textit{plug-in}, 
+che conferisce al sistema un’elevata flessibilità e manutebilità. \\
+Un’architettura \textit{pulita} inizia da un codice \textit{pulito}. Per far sì che le classi siano pulite, è 
+necessario che lo siano anche le componenti, e dalle componenti pulite deriva un sistema pulito. \\
+Il concetto di \textit{clean code} sfruttato nell’implementazione del software segue i 
+principi \textbf{SOLID}. Tali principi sono stati applicati in modo da ottimizzare l’architettura 
+e ciascuna delle sue componenti, che risultano dunque essere caratterizzate dal:
+\begin{itemize}
+	\item \textbf{Single responsability principle} – una classe dovrebbe avere uno ed un solo motivo per 
+		cambiare;
+	\item \textbf{Open-closed principle} – una classe dovrebbe essere aperta all’estensione ma chiusa 
+		alle modifiche;
+	\item \textbf{Liskov’s substitution principle} – gli oggetti di un programma dovrebbero essere rimpiazzabili 
+		  con istanze dei propri sottotipi senza alterare la correttezza del programma stesso;
+	\item \textbf{Interface segregation principle} – più interfacce client-spefici sono meglio di un’unica 
+		interfaccia general-purpose;
+	\item Dependency inversion principle – 
+\end{itemize}
+Il concetto di Clean architecture si basa sulla modularità dell’architettura stessa. \\
+Nel caso della progettazione del software prodotto è stata seguita una suddivisione del seguente tipo:
+\begin{itemize}
+	\item Presentation layer – responsabile della presentazione a schermo e della gestione delle 
+		interazioni degli utenti;
+	\item Domain layer – rappresentazione formale del dominio applicativo
+	\item Data layer – contenitore delle implementazioni delle sorgenti di dati e dei repository, 
+		che coordinano i dati provenienti da esse.
+\end{itemize}
+
+È bene sottolineare, però, che nell'effettiva implementazione dell'applicativo non è
+stato pedissequamente seguito lo schema appena proposto. È stato adottato, invece, un approccio 
+per funzionalità, risultato nell'applicazione del concetto di \textbf{Screaming architecture.}
+Essa permette, ad un solo sguardo, di comprendere esattamente la struttura del cuore del codice implementato: 
+la suddivisione nei diversi package "urla" al lettore l'approccio utizzato, che risulta dunque chiaro e compresibile.
+
+\newpage
+\subsubsection{Pattern architetturali}
+La Clean Architecture non preclude, però, la possibilità di adattare all'architettura dell'applicativo un proprio 
+design pattern architetturale. Quest'ultima potrebbe infatti essere definita come \textit{ibrida}: ciò è dovuto alla 
+\textit{fusione} di due pattern architetturali differenti utilizzati nella progettazione. \\
+Tali pattern sono \textbf{MVVM} e \textbf{MVI}; quest'ultimo è stato utilizzato per ovviare ai problemi 
+sofferti dal primo. Procediamo ad un'analisi più dettagliata. \\
+
+\textbf{MVVM} è un'architettura del tipo Model-View-ViewModel che evita l'accoppiamento stretto 
+tra ciascuna componente. Più nello specifico, in questo tipo di architettura, i figli non hanno un 
+riferimento diiretto al padre, ma hanno solo riferimenti tramite \textit{observables}.\\
+Esso è organizzato secondo tre strati:
+\begin{itemize}
+	\item Model - rappresenta i dati e la business logic dell'applicazione;
+	\item View - consiste del codice relativo alle interfacce utente;
+	\item ViewModel - definisce una sorta di ponte tra i due modelli sopracitati.
+\end{itemize}
+
+Il modello MVVM, per quanto affermato, pone però alcune problematiche, quali ad esempio 
+la difficoltà di riusabilità sia per le views che per i view model, la complicata comunicazione tra le 
+componenti ecc. \\
+
+A questo scopo, è stata realizzata un'integrazione con il modello MVI. \\
+
+\textbf{MVI} sta per Model-View-Intent. Si tratta di uno dei pattern architetturali più nuovi per applicazioni Android. 
+\begin{itemize}
+	\item Model - rappresenta uno stato. I model dovrebbero essere immutabili, in modo da 
+		  assicurare un flow di dati unidirezionale con gli altri strati;
+	\item View - rappresenta le view, che possono essere implementati in activity o fragment
+	\item Intent - rappresenta un'intenzione o una volontà di eseguire un'azione, sia dell'utente 
+		  che dell'app stessa.
+\end{itemize}
+
 
 \newpage
 \subsubsection{Diagramma di design del sistema}
